refactor(maven): 重构 Maven 项目配置
- 将 Java 编译版本从 21 降至 17
-移除各模块中的重复依赖- 在根 pom.xml 中添加公共依赖
- 优化项目结构和配置